--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ body {
 .select-menu {
   width: 160px;
   height: 32px;
+  border: 1px solid rgb(206, 201, 201);
   border-radius: 4px;
   text-align: center;
   font-size: 14px;
